--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,8 @@
     background-position: 5px 10px;
     background-size: calc(100%) calc(100%);
     background-position: calc(100%) center;
-    background-origin:content-box
+    background-origin:content-box;
+    
 }
 
 .header {
@@ -123,4 +124,83 @@
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: #FFFFFF;
+}
+
+.descr {
+    &__header {
+        font-family: 'Anton';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 50px;
+        line-height: 75px;
+        text-transform: uppercase;
+        margin-top: 113px;
+        color: #000000;
+    }
+    &__items {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 58px;
+    }
+    &__item_header {
+        font-family: 'Anton';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 25px;
+        line-height: 38px;
+        text-transform: uppercase;
+        color: #000000;
+        margin-bottom: 30px;
+        margin-top: 58px;
+    }
+    &__item_subheader {
+        max-width: 564px;
+        max-height: 146px; 
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        text-align: justify;
+        
+        color: #000000;
+    }
+    
+}
+
+.photo {
+    &__items {
+        flex-wrap: wrap;
+        margin-top: 120px;
+        height: 344px;
+        display: flex;
+        justify-content: space-between;   
+    }
+}
+
+.footer {
+    &__info {
+        padding-right: 100px;
+    }
+    max-width: 543px;
+    max-height: 400px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 114px;
+    margin-bottom: 80px;
+    background-color: burlywood;
+    background-size: cover;
+    &__items-center {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+
+.section__wrapper {
+    background-color: burlywood;
+    background-size: cover;
+    min-height: 100px;
 }
